# changelog

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.dev/: getVersion.sh
.teamcity/Changelog/: project-config.xml
.teamcity/Changelog/buildTypes/: Changelog_Build.xml
.teamcity/Changelog/vcsRoots/: Changelog_HttpsGitL0naxOrgScmRedevtoChangelogGitRefsHeadsMaster.xml  Changelog_HttpsGitL0naxOrgScmRedevtoChangelogGitRefsHeadsMaster1.xml
docs/dev/: Entry_Files.md
include/: .gitignore  Config.hpp.in
